# agent_system_lecture2025

./: .gitignore  .rosinstall  README.md
choreonoid_tutorial/: CMakeLists.txt  package.xml
choreonoid_tutorial/config/: Bodyfile_tutorial.md  URDFfile_tutorial.md  body_to_urdf_example.txt  body_to_urdf_instruction.txt
choreonoid_tutorial/logs/: shorttrack_simple_bipedal-2025-07-05-22-00-59-log.cnoid  shorttrack_simple_bipedal-2025-07-08-20-39-49-log.cnoid  shorttrack_simple_bipedal-2025-07-08-21-38-31-log.cnoid  shorttrack_simple_bipedal-2025-07-08-22-06-46-log.cnoid  shorttrack_simple_bipedal-2025-07-08-22-12-14-log.cnoid  shorttrack_simple_bipedal-2025-07-09-00-24-40-log.cnoid  shorttrack_simple_bipedal-2025-07-09-01-58-37-log.cnoid  shorttrack_simple_bipedal-2025-07-09-02-04-25-log.cnoid  shorttrack_simple_bipedal-2025-07-09-10-10-44-log.cnoid  shorttrack_simple_bipedal-2025-07-09-13-15-45-log.cnoid  shorttrack_simple_bipedal-2025-07-09-13-20-38-log.cnoid  shorttrack_simple_bipedal-2025-07-09-13-39-15-log.cnoid  shorttrack_simple_bipedal-2025-07-09-14-00-47-log.cnoid
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-05-22-00-59-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-08-20-39-49-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-08-21-38-31-log/: shorttrack_simple_bipedal-2025-07-08-21-38-31
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-08-21-38-31-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-08-22-06-46-log/: shorttrack_simple_bipedal-2025-07-08-22-06-46
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-08-22-06-46-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-08-22-12-14-log/: shorttrack_simple_bipedal-2025-07-08-22-12-14
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-08-22-12-14-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-00-24-40-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-01-58-37-log/: shorttrack_simple_bipedal-2025-07-09-01-58-37
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-01-58-37-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-02-04-25-log/: shorttrack_simple_bipedal-2025-07-09-02-04-25
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-02-04-25-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-10-10-44-log/: shorttrack_simple_bipedal-2025-07-09-10-10-44
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-10-10-44-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-13-15-45-log/: shorttrack_simple_bipedal-2025-07-09-13-15-45
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-13-15-45-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-13-20-38-log/: shorttrack_simple_bipedal-2025-07-09-13-20-38
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-13-20-38-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-13-39-15-log/: shorttrack_simple_bipedal-2025-07-09-13-39-15
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-13-39-15-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-14-00-47-log/: shorttrack_simple_bipedal-2025-07-09-14-00-47
choreonoid_tutorial/logs/shorttrack_simple_bipedal-2025-07-09-14-00-47-log/simple_bipedal/: simple_bipedal.body
choreonoid_tutorial/models/: SimpleTank.urdf
choreonoid_tutorial/msg/: RobotObservation.msg
choreonoid_tutorial/projects/: go2_inference.cnoid  go2_sample.cnoid  go2_stand.cnoid  shorttrack_simple_bipedal.cnoid  simple_bipedal_inference.cnoid
choreonoid_tutorial/scripts/: export_video.py
choreonoid_tutorial/src/: CMakeLists.txt  InferenceController.cpp  InferenceControllerSB.cpp  ROSChoreonoidBridgeController.cpp  StandController.cpp
inference_pkg/: CMakeLists.txt  inference.cpp  package.xml
inference_tutorial/: CMakeLists.txt  dump_cfgs_to_yaml.py  dump_training_data.py  inference.cpp  package.xml
inference_tutorial/scripts/: dump_training_data.py  sb_dump_training_data.py
